added index and css styles

--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
             <h3>LOCATION</h3>
             <p>2215 John Daniel Drive <br> Clark, MO 65243</p>
         </div>
-        <div class="items">
+        <div class="icons">
             <h3>AROUND THE WEB</h3>
-            <div class="icons">
-                <img src="img/facebook.png" alt="">
-                <img src="img/twitter.png" alt="">
-                <img src="img/linkedin.png" alt="">
-                <img src="img/global.png" alt="">
+             <div class="pic">
+                <div class="icon"><img src="img/facebook.png" alt=""></div>
+               <div class="icon"> <img src="img/twitter.png" alt=""></div>
+                <div class="icon"><img src="img/linkedin.png" alt=""></div>
+                <div class="icon"><img src="img/global.png" alt=""> </div>
             </div>
         </div>
         <div class="items">
             <h3>ABOUT FREELANCER</h3>
-            <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start <br> Bootstrap.</p>
+            <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start <br> Bootstrap.</p> 
         </div>
     </footer>
     <section class="copy">
